# VoidLauncher

./: .gitignore  PROJECT_NOTEBOOK.md  README.md  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accounts.rs  auth.rs  config.rs  curseforge.rs  download.rs  error.rs  events.rs  game_logs.rs  import.rs  instances.rs  java.rs  java_download.rs  jvm.rs  launch.rs  lib.rs  logger.rs  main.rs  modrinth.rs  playtime.rs  versions.rs
src-tauri/src/modloaders/: fabric.rs  forge.rs  liteloader.rs  mod.rs  neoforge.rs  prism_meta.rs  quilt.rs
src/components/: ErrorBoundary.tsx  MicrosoftLoginCard.tsx  Sidebar.tsx  Titlebar.tsx  UpdaterModal.tsx  index.ts
src/components/install/: InstallOverlay.tsx
src/components/instances/: ContentBrowser.tsx  ContentManager.tsx  InstanceDetail.tsx  InstanceEditor.tsx  InstanceList.tsx  PackBrowser.tsx  PacksManager.tsx  ScreenshotsGallery.tsx  WorldsManager.tsx
src/components/layout/: HomeLayout.tsx
src/hooks/: useGameEvents.ts  useKeyboardShortcuts.ts  useLatestVersion.ts  useUpdater.ts
src/lib/: bannerPresets.ts  memory.ts  uiLog.ts
src/pages/: Accounts.tsx  CreateInstanceWizard.tsx  GameLogs.tsx  Home.tsx  Instances.tsx  Login.tsx  Logs.tsx  Settings.tsx
src/stores/: accountsStore.ts  authStore.ts  focusStore.ts  gameLogStore.ts  iconCacheStore.ts  instanceStore.ts  languageStore.ts  logStore.ts  settingsStore.ts  themeStore.ts
(+15 files in other folders)
