[package]
name = "voidlauncher"
version = "0.1.0"
description = "VoidLauncher — Custom Minecraft Launcher"
authors = ["VoidLauncher"]
edition = "2021"

[lib]
name = "voidlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
zip = "2"
dirs = "6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
sysinfo = "0.33"
urlencoding = "2"
notify = "6"
notify-debouncer-mini = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
